--- a/view/frontend/templates/pixlee/category_gallery.phtml
+++ b/view/frontend/templates/pixlee/category_gallery.phtml
@@ -1,28 +1,26 @@
 <?php
 /**
- * Category view template
- *
- * @var $block Pixlee\Pixlee\Block\CatalogWidget
+ * Copyright © Pixlee TurnTo, Inc. All rights reserved.
+ * See COPYING.txt for license details.
  */
-?>
-<?php
-$helper = $block->getDataHelper();
+/* @var \Magento\Catalog\Block\Category\View $block */
+/* @var \Pixlee\Pixlee\ViewModel\ProductWidget $viewModel */
+$viewModel = $block->getViewModel();
 $nativeCategoryId = $block->getCurrentCategory()->getId();
-$websiteId = $helper->getWebsiteId();
-$helper->initializePixleeAPI($websiteId);
 ?>
-<?php if ($helper->isActive() && $helper->getCDPWidgetId() != "") : ?>
+<?php if ($viewModel->isActive() && !empty($viewModel->getCDPWidgetId())) : ?>
     <div id="pixlee_container"></div>
     <div id="pixlee_widget_master_container"></div>
-    <script id="pixlee_script" type="text/javascript">
-        require(['https://assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js'],function (pixlee){
-            Pixlee.init({apiKey: '<?= /* @noEscape */ $helper->getApiKey(); ?>'});
-            Pixlee.addCategoryWidget({
-                widgetId: <?= /* @noEscape */ $helper->getCDPWidgetId(); ?>,
-                nativeCategoryId: <?= /* @noEscape */ $nativeCategoryId; ?>,
-                ecomm_platform: 'magento'
-            });
-            Pixlee.resizeWidget();
-        });
+
+    <script type="text/x-magento-init">
+        {
+            "*": {
+                "Pixlee_Pixlee/js/cdp-widget":{
+                    "apiKey": "<?= $block->escapeJs($viewModel->getApiKey()) ?>",
+                    "widgetId": <?= $block->escapeJs($viewModel->getCDPWidgetId()) ?>,
+                    "nativeCategoryId": <?= $block->escapeJs($nativeCategoryId) ?>
+                }
+            }
+        }
     </script>
 <?php endif; ?>
