--- a/view/frontend/templates/pixlee/pixlee_tracking_pixel.phtml
+++ b/view/frontend/templates/pixlee/pixlee_tracking_pixel.phtml
@@ -1,15 +1,21 @@
 <?php
-$helper = $block->getDataHelper();
-$websiteId = $helper->getWebsiteId();
-$helper->initializePixleeAPI($websiteId);
+/**
+ * Copyright © Pixlee TurnTo, Inc. All rights reserved.
+ * See COPYING.txt for license details.
+ */
+/* @var \Magento\Framework\View\Element\Template $block */
+/* @var \Pixlee\Pixlee\ViewModel\ProductWidget $viewModel */
+$viewModel = $block->getViewModel();
 ?>
 
-<?php if ($helper->isActive()) : ?>
-    <script type="text/javascript">
-        require(["https://assets.pixlee.com/assets/pixlee_events.js"], function() {
-        	if (typeof Pixlee_Analytics !== 'undefined') {
-	            window.pixlee_analytics = new Pixlee_Analytics('<?= /* @noEscape */ $helper->getApiKey(); ?>');
-	        }
-        });
+<?php if ($viewModel->isActive()) : ?>
+    <script type="text/x-magento-init">
+        {
+            "*": {
+                "Pixlee_Pixlee/js/analytics":{
+                    "apiKey": "<?= $block->escapeJs($viewModel->getApiKey()) ?>"
+                }
+            }
+        }
     </script>
 <?php endif; ?>
